good progress on about

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -51,7 +51,7 @@ const pathname = Astro.site?.pathname;
 
     .navigation a {
         text-decoration: none;
-        color: var(--text-color-bright);
+        color: white;
         font-size: 1.2rem;
         padding: 1em;
         text-align: center;
@@ -66,7 +66,7 @@ const pathname = Astro.site?.pathname;
         width: 100%;
         transform: scaleX(0);
         height: var(--line-width);
-        background-color: var(--text-color-bright);
+        background-color: white;
         transition: transform .4s cubic-bezier(.7,0,0,1.5);
         margin-bottom: calc(var(--line-width) * -1);
     }
