--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,6 +28,7 @@ setDefaultNamespace("about");
     }
     .left {
         width: 100%;
+        min-height: 45rem;
         display: flex;
         justify-content: center;
         align-items: center;
