--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -132,7 +132,7 @@ setDefaultNamespace("process");
         width: 100%;
         height: 100%;
         z-index: 1;
-        background-color: var(--background-1);
+        background-color: white;
         border: solid var(--line-width) var(--text-color);
     }
     .project-box .display {
