--- a/src/components/decorations/Cogs.astro
+++ b/src/components/decorations/Cogs.astro
@@ -32,12 +32,12 @@ import Cog from "./Cog.astro";
         position: absolute;
         z-index: 1;
     }
-    #cog-1 { left: 8rem; top: -2rem; }
-    #cog-2 { left: 2.8rem; top: -1rem; }
-    #cog-3 { left: -2rem; top: 3rem; }
+    #cog-1 { left: 5rem; top: -3rem; }
+    #cog-2 { left: -.8rem; top: -2rem; }
+    #cog-3 { left: -4.5rem; top: 3rem; }
     
-    #cog-4 { right: 2.2rem; bottom: -1rem; }
-    #cog-5 { right: -1.5rem; bottom: -1.5rem; }
+    #cog-4 { right: 2.2rem; bottom: -2.9rem; }
+    #cog-5 { right: -1.7rem; bottom: -1.7rem; }
 
-    #cog-6 { right: -1rem; top: 3rem; }
+    #cog-6 { right: -2rem; top: -2rem; }
 </style>
