--- a/src/components/decorations/Cog.astro
+++ b/src/components/decorations/Cog.astro
@@ -41,6 +41,6 @@ const toothLength = size * 3;
         border-radius: 50%;
         width: 100%;
         height: 100%;
-        background-color: var(--background-1);
+        background-color: white;
     }
 </style>
