--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -117,6 +117,8 @@ setDefaultNamespace("process");
         flex-direction: column;
         align-items: center;
         z-index: 2;
+        overflow: hidden;
+        border: solid var(--line-width) var(--text-color);
     }
     .eater {
         position: absolute;
@@ -125,15 +127,14 @@ setDefaultNamespace("process");
         width: 200vw;
         /* When things don't have time to disappear, they will thanks to that eater */
         background: linear-gradient(180deg, var(--secondary-color) 10rem, #ffffff00);
-        z-index: 1;
+        z-index: 0;
     }
     .project-box .style {
         position: absolute;
         width: 100%;
         height: 100%;
-        z-index: 1;
+        z-index: 0;
         background-color: white;
-        border: solid var(--line-width) var(--text-color);
     }
     .project-box .display {
         margin-top: 3rem;
