--- a/src/components/decorations/MouseFollower.astro
+++ b/src/components/decorations/MouseFollower.astro
@@ -1,4 +1,4 @@
-<div class="mouse-dot" />
+<div class="mouse-dot" transition:persist />
 
 <script>
     document.addEventListener('astro:page-load', () => {
