--- a/src/layouts/MainPage.astro
+++ b/src/layouts/MainPage.astro
@@ -48,13 +48,15 @@ import { t } from "i18next";
 <style>
     h1 {
 		font-family: "Roxie Rossa", serif;
-		font-size: 4rem;
+		font-size: 3.5rem;
 		text-align: center;
 		max-width: 90vw;
+		margin-top: 35vh;
+		font-weight: 300;
 	}
 	@media screen and (min-width: 1000px) {
 		h1 {
-			font-size: 6rem;
+			font-size: 7rem;
 		}
 	}
 	.scroll-cta {
@@ -75,7 +77,7 @@ import { t } from "i18next";
 	.header-text {
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
+		justify-content: flex-start;
 		align-items: center;
 		height: 100%;
 	}
