good progress on the about page

--- a/src/components/about/ProfileCard.astro
+++ b/src/components/about/ProfileCard.astro
@@ -32,6 +32,7 @@ import profile from "../../assets/face.jpg";
         font-weight: 400;
         text-align: center;
         font-family: 'Roxie Rossa', serif;
+        color: var(--tertiary-text-color);
     }
     
     .profile-card ul {
