--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -82,8 +82,8 @@ import MouseFollower from "../components/decorations/MouseFollower.astro";
 			--secondary-gray: #d1d6d8;
 
 			--tertiary-color: #743131;
-			--tertiary-text-color: #ececec;
-			--tertiary-gray: #eeece8d2;
+			--tertiary-text-color: #fffefed7;
+			--tertiary-gray: #dbcccb;
 
 			--text-color: #111;
 			--gray: #c9c9c9;
