--- a/src/components/about/Cursus.astro
+++ b/src/components/about/Cursus.astro
@@ -1,11 +1,13 @@
 ---
 import { getCollection } from "astro:content";
 
-const pathHeight = 500;
-const pathWidth = 30;
-let path = `M ${pathWidth/2} 0`;
+const experiences = await getCollection("experience");
+const sortedExperiences = experiences.sort((a, b) => a.data.start < b.data.start ? 1 : -1);
 
-const curveness = 50;
+const pathHeight = 250 * experiences.length;
+const pathWidth = 30;
+
+const curveness = 20 * experiences.length;
 const getCurvedPosition = (percent: number) => {
     return {
         x: 0.6*pathWidth*(Math.sin(percent*curveness) * 0.5 + 0.5),
@@ -14,36 +16,34 @@ const getCurvedPosition = (percent: number) => {
 }
 
 // sinusoide shape
-for (let i = 0; i <= 200; i++) {
+const start = getCurvedPosition(0);
+let path = "M " + start.x + " " + start.y;
+for (let i = 0; i <= 100 * experiences.length; i++) {
     const { x, y } = getCurvedPosition(i / 200);
     path += " L " + x + " " + y;
 }
-
-const experiences = await getCollection("experience");
-const sortedExperiences = experiences.sort((a, b) => a.data.start > b.data.start ? 1 : -1);
 ---
 
+<h2>Cursus</h2>
 <div class="cursus">
     <svg width={pathWidth+4} height={pathHeight} viewBox={`-2 0 ${pathWidth+2} ${pathHeight}`} xmlns="http://www.w3.org/2000/svg">
-        <path d={`M 0 0 L ${pathWidth} 0`} />
         <path d={path} />
-        <path d={`M 0 ${pathHeight} L ${pathWidth} ${pathHeight}`} />
     </svg>
     <div class="experiences" style={{height: pathHeight + "px"}}>
         {sortedExperiences.map((experience, i) => {
             const percent = i / (sortedExperiences.length - 1);
             const { x, y } = getCurvedPosition(percent);
-            const start = new Date(experience.data.start).toLocaleDateString();
-            const end = experience.data.end ? new Date(experience.data.end).toLocaleDateString() : "now";
-            const lineLength = 100 - x;
+            const start = new Date(experience.data.start).toLocaleDateString(undefined, { month: 'short', day: 'numeric', year: 'numeric' });
+            const end = experience.data.end ? new Date(experience.data.end).toLocaleDateString(undefined, { month: 'short', day: 'numeric', year: 'numeric' }) : "today";
+            const lineLength = 70 - x;
             return (
                 <div class="experience">
-                    <div class="line" style={`left: ${x}px; top: ${y}px; width: ${lineLength}`} />
+                    <div class="line" style={`left: ${x}px; top: ${y}px; width: ${lineLength}px;`} />
                     <div class="circle" style={`left: ${x}px; top: ${y}px`} />
                     <div class="content" style={`top: ${y - 16}px`}>
                         <h3>{experience.data.title}</h3>
                         <p>{start} - {end}</p>
-                        <p>{experience.data.description}</p>
+                        <p class="description">{experience.data.description}</p>
                     </div>
                 </div>
             )
@@ -51,16 +51,21 @@ const sortedExperiences = experiences.sort((a, b) => a.data.start > b.data.start
     </div>
 </div>
 
+<script>
+    import '../../scripts/cursus';
+</script>
+
 <style>
     .cursus {
-        max-width: 50rem;
+        max-width: 30rem;
         margin: auto;
         padding: 1rem;
+        margin: 30vh 0;
     }
 
     svg {
         fill: none;
-        stroke: black;
+        stroke: var(--text-color);
         stroke-width: var(--line-width);
         position: absolute;
     }
@@ -72,22 +77,32 @@ const sortedExperiences = experiences.sort((a, b) => a.data.start > b.data.start
     .line {
         position: absolute;
         height: 1px;
-        background-color: black;
+        background-color: var(--text-color);
     }
 
     .circle {
         position: absolute;
-        width: 10px;
-        height: 10px;
-        background-color: black;
+        width: 12px;
+        height: 12px;
+        background-color: var(--tertiary-color);
         border-radius: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(-30%, -50%);
     }
 
     .content {
         position: absolute;
-        left: 100px;
+        left: 80px;
         max-width: 20rem;
     }
+
+    .content h3 {
+        font-family: 'Lora', serif;
+        text-transform: uppercase;
+        font-weight: 300;
+    }
     
+    .content .description {
+        margin-top: 1rem;
+        font-size: 0.9rem;
+    }
 </style>
