--- a/src/components/about/Skills.astro
+++ b/src/components/about/Skills.astro
@@ -1,1 +1,22 @@
-<h2>Skills</h2>
+<div class="skills">
+    <h2>Skills</h2>
+    <h3>Languages</h3>
+    <ul>
+        <li>French (native)</li>
+        <li>English (fluent)</li>
+        <li>German (intermediate)</li>
+    </ul>
+    <h3>Programming Proficiencies</h3>
+    <ul>
+        <li>C, C++, low-level</li>
+        <li>Full stack web development</li>
+        <li>C#, Python</li>
+    </ul>
+</div>
+
+<style>
+    h2 {
+        color: var(--tertiary-text-color);
+        margin: .5rem 1rem;
+    }
+</style>
