--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -118,6 +118,18 @@ import MouseFollower from "../components/decorations/MouseFollower.astro";
 			color: inherit;
 		}
 
+		h2 {
+			font-family: 'Roxie rossa', serif;
+			font-size: 2.5rem;
+			font-weight: 300;
+		}
+
+		h3 {
+			font-family: 'Lora', serif;
+			font-size: 2rem;
+			font-weight: 400;
+		}
+
 		#zoom-container {
 			position: fixed;
 			top: 0;
