--- a/src/components/about/Skills.astro
+++ b/src/components/about/Skills.astro
@@ -19,4 +19,24 @@
         color: var(--tertiary-text-color);
         margin: .5rem 1rem;
     }
+
+    h3 {
+        margin-top: 2.5rem;
+    }
+
+    ul {
+        list-style-type: none;
+        padding: 0;
+        font-family: 'Lora', serif;
+        font-size: 1.2rem;
+        margin: 1rem 0;
+    }
+
+    li::before {
+        content: "→";
+        margin-left: -1rem;
+        margin-right: .8rem;
+        font-size: 1.4em;
+        font-family: 'Roxie rossa', serif;
+    }
 </style>
