--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -2,7 +2,7 @@
 import { t } from "i18next";
 import { localizePath } from "astro-i18next";
 
-// Pages to display in the navigation
+// Pages to display in the navigation, with their path and title localized
 const pages = [
     { path: localizePath("/"), title: t("home:meta.title") },
     { path: localizePath("/process"), title: t("common:nav.process") },
@@ -12,13 +12,6 @@ const pages = [
 // Current page pathname
 const pathname = Astro.site?.pathname;
 ---
-
-<script is:inline>
-    function navigate(e) {
-        console.log(e);
-        e.preventDefault();
-    }
-</script>
 
 <nav class="navigation">
     <!-- Loop through the pages and create a link for each one -->
@@ -34,6 +27,7 @@ const pathname = Astro.site?.pathname;
 
 <style>
     .navigation {
+        /* The navigation bar is fixed to the top of the screen */
         position: fixed;
         top: 0;
         left: 50%;
@@ -50,14 +44,16 @@ const pathname = Astro.site?.pathname;
     }
 
     .navigation a {
-        text-decoration: none;
+        /* white text to work with the mix-blend-mode */
         color: white;
+        text-decoration: none;
         font-size: 1.2rem;
         padding: 1em;
         text-align: center;
         transition: transform .2s ease-in-out;
     }
 
+    /* underline effect of the links */
     .navigation a::after {
         content: "";
         display: block;
@@ -68,11 +64,9 @@ const pathname = Astro.site?.pathname;
         transition: transform .4s cubic-bezier(.7,0,0,1.5);
         margin-bottom: calc(var(--line-width) * -1);
     }
-
     .navigation a:hover::after {
         transform: scaleX(1);
     }
-
     .navigation a:active {
         transform: scale(.95) translateY(3px);
     }
