--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -55,6 +55,7 @@ setDefaultNamespace("about");
         }
         #second-section {
             flex-flow: row-reverse;
+            margin-top: 5vh;
         }
         .left, .right {
             height: 100vh;
