--- a/src/components/decorations/Separator.astro
+++ b/src/components/decorations/Separator.astro
@@ -6,29 +6,30 @@ const { height = "10rem", animate = false } = Astro.props;
 
 <style>
     @keyframes expand {
+        /* start with shrinked line */
         0% {
-            transform-origin: 0% 0%;
-            transform: scale(1, 0.02);
+            transform-origin: 50% 0%;
+            transform: scaleY(0.02);
         }
-        
+        /* expand to full height */
         48% {
-            transform-origin: 0% 0%;
-            transform: scale(1, 1);
-            
+            transform-origin: 50% 0%;
+            transform: scaleY(1);
         }
-        
+        /* change origin to bottom */
         52% {
-            transform-origin: 100% 100%;
-            transform: scale(1, 1);
+            transform-origin: 50% 100%;
+            transform: scaleY(1);
         }
-        
+        /* shrink again, but from bottom */
         80% {
-            transform-origin: 100% 100%;
-            transform: scale(1, 0.02);
+            transform-origin: 50% 100%;
+            transform: scaleY(0.02);
         }
+        /* reset origin to top while it is shrinked */
         to {
-            transform-origin: 0% 0%;
-            transform: scale(1, 0.02);
+            transform-origin: 50% 0%;
+            transform: scaleY(0.02);
         }
     }
 
