--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import MouseFollower from "../components/decorations/MouseFollower.astro";
 <!DOCTYPE html>
 <html lang={i18next.language}>
 	<head>
-		<meta charset="UTF-8" />
+		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
 		<slot name="head" />
 		<link rel="icon" type="image/png" href="/favicon.png" />
