--- a/src/components/about/Skills.astro
+++ b/src/components/about/Skills.astro
@@ -15,6 +15,10 @@
 </div>
 
 <style>
+    .skills {
+        margin: 0 2rem;
+    }
+
     h2 {
         color: var(--tertiary-text-color);
         margin: .5rem 1rem;
