--- a/src/pages/process.astro
+++ b/src/pages/process.astro
@@ -107,6 +107,10 @@ setDefaultNamespace("process");
         color: var(--primary-gray);
     }
 
+    :global(.process-section strong) {
+        font-weight: 600;
+    }
+
     @media screen and (min-width: 1100px){
         main {
             width: 60%;
